--- a/index.html
+++ b/index.html
@@ -193,16 +193,6 @@
                           </div>
                           <!-- / Education 1 -->
 
-                          <!-- Education 1 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
-                            <span class="item-period">2019</span>
-                            <span class="item-small">Massachusetts Institute of Technology (MIT), MA, USA</span>
-                            <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
-                            <p><b>Courses:</b> 6.437 Inference and Information, 6.802 Computational Systems Biology, 6.045 Automata Computability and Complexity Theory, 6.100  Independent Research Project</p>
-                          </div>
-                          <!-- / Education 1 -->
-
                           <!-- Education 2 -->
                           <div class="timeline-item">
                             <h4 class="item-title"><u>Computer Science (Yao Class)</u> - Bachelor of Engineering</h4>
@@ -230,7 +220,7 @@
                                 <span class="item-period">2013-2016</span>
                                 <span class="item-small">Beijing No.4 High School, Beijing, China</span>
                                 <p class="item-description">Math Competition Group and Debate Team</p>
-                                <p><a href="https://www.bv2008.cn/app/user/view.php?id=uxaf1YH8inkFb"> 80 hours of recorded volunteer experience</a></p>
+                                <p><a href="https://www.bv2008.cn/app/user/view.php?id=uxaf1YH8inkFb" target="_blank"> 80 hours of recorded volunteer experience</a></p>
                             </div>
                             <!-- / Education 4 -->
                         </div>
@@ -244,10 +234,22 @@
                         </div>
 
                         <div class="timeline">
+
+                          <!-- Experience 1 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Visiting Student</h4>
+                            <span class="item-period">Jan 2020 - Now</span>
+                            <span class="item-small">United Arab Emirates University, UAE</span>
+                            <p class="item-description">The original schedule was a 2-week cultural exchange program sponsored by the Asian University Alliance. Due to the unexpected <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">COVID-19 outbreak</a>, I have received humanitarian support from the UAEU that they invited all the Chinese students to stay longer as guests.</p>
+                            <p class="item-description">Participate in a task-driven project at the INDUCE Lab; Continue my education through edX, Udacity, and Tsinghua Yuketang.</p>
+                            <p class="item-description">Seize this opportunity to dive deep into the regional affairs by auditing courses, borrowing from the library, and engaging in student activities.</p>
+                          </div>
+                          <!-- / Experience 1 -->
+
                           <!-- Experience 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Undergraduate Visiting Research (UGVR)</h4>
-                            <span class="item-period">Jul 2019 - Now</span>
+                            <span class="item-period">Jul 2019 - Aug 2019</span>
                             <span class="item-small">Helix Group, Stanford University, CA, USA</span>
                             <p class="item-description">Identify novel associations between disease and immune response on molecule networks</p>
                             <p class="item-description">Drug synergy effects prediction with few-shot learning</p>
@@ -283,7 +285,7 @@
                                 <span class="item-small">KEG, Tsinghua University, Beijing, China</span>
                                 <p class="item-description">Crawled data from Wikipedia knowledge base</p>
                                 <p>Contributed by putting forward a method to solve inaccurate data source problem innovatively</p>
-                                <p><a href="https://arxiv.org/abs/1710.04822">Proc. IEEE DSC 2018</a></p>
+                                <p><a href="https://arxiv.org/abs/1710.04822" target="_blank">Proc. IEEE DSC 2018</a></p>
                             </div>
                             <!-- / Experience 4 -->
 
@@ -345,6 +347,11 @@
                             <div class="skill-container">
                                 <div class="skill-percentage skill-7"></div>
                             </div>
+
+                          <h4>Android Development with Kotlin</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-7"></div>
+                          </div>
 
                         </div>
                         
@@ -544,11 +551,11 @@
                       </figure>
 
                       <figure class="item" data-groups='["all", "field"]'>
-                        <a class="ajax-page-load" href="guizhou.html">
-                          <img src="field/guizhou/cover.jpeg" alt="">
+                        <a class="ajax-page-load" href="uae.html">
+                          <img src="field/uae/cover.jpeg" alt="">
                           <div>
-                            <h5 class="name">Guizhou: Big Data Industry and Poverty Alleviation</h5>
-                            <small>Field Study in 2018 Winter</small>
+                            <h5 class="name">UAE: My Unpredictable Journey</h5>
+                            <small>Asian University Alliance Deep Dive Program 2020 and Beyond</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
@@ -566,11 +573,11 @@
                       </figure>
 
                       <figure class="item" data-groups='["all", "field"]'>
-                        <a class="ajax-page-load" href="uae.html">
-                          <img src="field/uae/cover.jpeg" alt="">
+                        <a class="ajax-page-load" href="guizhou.html">
+                          <img src="field/guizhou/cover.jpeg" alt="">
                           <div>
-                            <h5 class="name">UAE: My Unpredictable Journey</h5>
-                            <small>Asian University Alliance Deep Dive Program 2020 and Beyond</small>
+                            <h5 class="name">Guizhou: Big Data Industry and Poverty Alleviation</h5>
+                            <small>Field Study in 2018 Winter</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
