--- a/uae.html
+++ b/uae.html
@@ -85,12 +85,14 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i>Students from 14 universities across Asia</p></li>
-                    <li><p><i class="fa fa-map-pin"></i>United Arab Emirates University</p></li>
-                    <li><p><i class="fa fa-globe"></i><a href="http://www.asianuniversities.org" target="_blank">Asian University Alliance (AUA)</a></p></li>
+                    <li><p><i class="fa fa-user"></i>26 male and female students representing 9 Asian universities</p></li>
+                    <li><p><i class="fa fa-map-pin"></i>United Arab Emirates University  <i class="fa fa-globe"></i><a href="http://www.asianuniversities.org" target="_blank">Asian University Alliance (AUA)</a> </p></li>
+                    <li><p><i class="fa fa-camera"></i><a href="https://www.instagram.com/p/B8A5u9qpcBm/?utm_source=ig_web_copy_link" target="_blank">Video</a></p></li>
                     <li><p><i class="fa fa-file-text-o"></i><a href="field/uae/pre.pdf" target="_blank">Presentation "Transportation Systems in the UAE" (Best Team Award)</a> </p></li>
                     <li><p><i class="fa fa-file-text-o"></i><a href="field/uae/notes.pdf" target="_blank">Lecture Notes</a> </p></li>
                     <li><p><i class="fa fa-calendar"></i>Jan 2020 ~ Feb 2020</p></li>
+
+                    <li><p><i class="fa fa-sticky-note"></i> My blogs <a href="https://medium.com/@shiyinw/my-unpredictable-journey-in-the-uae-758d98afcacb" target="_blank">Feb 4</a></p></li>
                 </ul>
 
                 <p class="text-justify">
