--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="https://github.com/shiyinw"><i class="fa fa-github"></i></a>
-                        <a href="https://gitlab.com/shiyinw"><i class="fa fa-gitlab"></i></a>
-                        <a href="http://www.linkedin.com/in/sherilynwang/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.instagram.com/sherilyn_shiyin_wang/"><i class="fa fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100009201751659"><i class="fa fa-facebook"></i></a>
-                        <a href="https://medium.com/@shiyinw"><i class="fa fa-medium"></i></a>
+                        <a href="https://github.com/shiyinw" target="_blank"><i class="fa fa-github"></i></a>
+                        <a href="https://gitlab.com/shiyinw" target="_blank"><i class="fa fa-gitlab"></i></a>
+                        <a href="http://www.linkedin.com/in/sherilynwang/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/sherilyn_shiyin_wang/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100009201751659" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://medium.com/@shiyinw" target="_blank"><i class="fa fa-medium"></i></a>
                       </div>
                     </div>
                   </div>
@@ -240,9 +240,9 @@
                             <h4 class="item-title">Visiting Student</h4>
                             <span class="item-period">Jan 2020 - Now</span>
                             <span class="item-small">United Arab Emirates University, UAE</span>
-                            <p class="item-description">The original schedule was a 2-week cultural exchange program sponsored by the Asian University Alliance. Due to the unexpected <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">COVID-19 outbreak</a>, I have received humanitarian support from the UAEU that they invited all the Chinese students to stay longer as guests.</p>
-                            <p class="item-description">Participate in a task-driven project at the INDUCE Lab; Continue my education through edX, Udacity, and Tsinghua Yuketang.</p>
-                            <p class="item-description">Seize this opportunity to dive deep into the regional affairs by auditing courses, borrowing from the library, and engaging in student activities.</p>
+                            <p class="item-description">The original schedule was a 2-week cultural exchange program sponsored by the Asian University Alliance. Due to the unexpected <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">COVID-19 outbreak</a>, all Chinese students have received humanitarian support from the UAEU to stay longer as guests.</p>
+                            <p class="item-description">Lead a task-driven clinical blockchain project at the INDUCE Lab; Continue my education through edX, Udacity, and Tsinghua Yuketang.</p>
+                            <p class="item-description">Dive deep into the regional affairs by auditing courses, visiting the library, and engaging in student activities.</p>
                           </div>
                           <!-- / Experience 1 -->
 
@@ -253,7 +253,7 @@
                             <span class="item-small">Helix Group, Stanford University, CA, USA</span>
                             <p class="item-description">Identify novel associations between disease and immune response on molecule networks</p>
                             <p class="item-description">Drug synergy effects prediction with few-shot learning</p>
-                            <p>(In progress)</p>
+                            <p>(Paper In Progress)</p>
                           </div>
                           <!-- / Experience 1 -->
 
@@ -264,7 +264,7 @@
                             <span class="item-small">HanLab, MIT, MA, USA</span>
                             <p class="item-description">Designed a differential privacy guaranteed framework for edge-cloud training with theoretical proof</p>
                               <p>Analyzed the trade-off between performance and privacy</p>
-                              <p>(In progress)</p>
+                              <p>(Paper In Progress)</p>
                           </div>
                           <!-- / Experience 2 -->
 
@@ -275,6 +275,7 @@
                             <span class="item-small">DMG, UIUC, IL, USA</span>
                             <p class="item-description">Participated to a project which approach the multi-source partially labelled problem by a CRF+LSTM framework</p>
                               <p>Helped to complete a KDD demo SetSearch+ at the beginning of my intern</p>
+                            <p><a href="#">Paper Under Review</a></p>
                           </div>
                           <!-- / Experience 3 -->
 
