Add UAEU Education

--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@
 
                         <div class="timeline">
 
+                          <div class="timeline-item">
+                            <h4 class="item-title">Self-Education in COVID-19 Crisis</h4>
+                            <span class="item-period">2020</span>
+                            <span class="item-small">United Arab Emirates University, Al Ain, UAE</span>
+                            <p><b>Auditing Courses:</b>Principle of International Relations, Social Problems, Arab and Islamic Civilization, Islamic Culture</p>
+                            <p><b>MOOCs: </b><a href="https://www.udacity.com" target="_blank">Developing Android Apps with Kotlin</a>, <a href="https://www.edx.org/course/political-economy-and-economic-development" target="_blank">Political Economy and Economic Development</a>, <a href="https://www.edx.org/course/introduction-to-biology-the-secret-of-life-3", target="_blank">Introduction to Biology - The Secret of Life</a></p>
+                          </div>
+                          <!-- / Education 1 -->
+
                           <!-- Education 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
