Add Lifelong Learning Section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 </div>
                 <div class="page-content">
 
+                  <!-- Academic & Research Experiences -->
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
@@ -249,9 +250,8 @@
                             <h4 class="item-title">Visiting Student</h4>
                             <span class="item-period">Jan 2020 - Now</span>
                             <span class="item-small">United Arab Emirates University, UAE</span>
-                            <p class="item-description">The original schedule was a 2-week cultural exchange program sponsored by the Asian University Alliance. Due to the unexpected <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">COVID-19 outbreak</a>, all Chinese students have received humanitarian support from the UAEU to stay longer as guests.</p>
-                            <p class="item-description">Lead a task-driven clinical blockchain project at the INDUCE Lab; Continue my education through edX, Udacity, and Tsinghua Yuketang.</p>
-                            <p class="item-description">Dive deep into the regional affairs by auditing courses, visiting the library, and engaging in student activities.</p>
+                            <p class="item-description">Due to the COVID-19 outbreak, all Chinese students in the 2-week youth diplomatic program received humanitarian support from the UAEU to stay longer as guests</p>
+                            <p class="item-description">Lead a task-driven clinical blockchain project at the INDUCE Lab</p>
                           </div>
                           <!-- / Experience 1 -->
 
@@ -303,6 +303,99 @@
                       </div>
                     </div>
                   </div>
+                  <!-- Academic & Research Experiences End -->
+
+                  <!-- Testimonials -->
+                  <div class="row">
+                    <div class="col-sm-12 col-md-12">
+                      <div class="block-title">
+                        <h3>Lifelong Learning</h3>
+                      </div>
+
+                      <div class="testimonials owl-carousel block">
+
+                        <!-- Testimonial Biology -->
+                        <div class="testimonial-item">
+                          <div class="testimonial-credits">
+                            <div class="testimonial-picture">
+                              <img src="moocs/MITx_700x.png" alt="">
+                            </div>
+                            <div class="testimonial-author-info">
+                              <p class="testimonial-author">MITx: 7.00x<a href="#"> <i class="fa fa-book"></i></a></p>
+                              <p class="testimonial-firm">Introduction to Biology - The Secret of Life</p>
+                            </div>
+                          </div>
+                          <div class="testimonial-content">
+                            <div class="testimonial-text">
+                              <p><strong>How to describe the building blocks of life and how their interactions dictate structure and function in biology.</strong> <i class="fa fa-comment"></i> (In preparation for my graduate study in the interdisciplinary with Biology/Medicine.) <i class="fa fa-fw fa-clock-o"></i> Mar 2020</p>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- End of Testimonial Biology -->
+
+                        <!-- Testimonial Freedom of Expression -->
+                        <div class="testimonial-item">
+                          <div class="testimonial-credits">
+                            <div class="testimonial-picture">
+                              <img src="moocs/ColumbiaX_GFOE2.jpg" alt="">
+                            </div>
+                            <div class="testimonial-author-info">
+                              <p class="testimonial-author">ColumbiaX: GFOE2 <a href="#"><i class="fa fa-book"></i></a></p>
+                              <p class="testimonial-firm">Freedom of Expression and Information in the Time of Globalization: Advanced Course</p>
+                            </div>
+                          </div>
+                          <div class="testimonial-content">
+                            <div class="testimonial-text">
+                              <p><strong>The normative framework of journalism in the digital age. Challenges including hate, incitement, and privacy. How to regulate technology innovations.</strong> <i class="fa fa-comment"></i> (I took this course for fun during my unexpected stay at the UAEU because my roommate studies Journalism.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- End of Testimonial Freedom of Expression -->
+
+                        <!-- Testimonial Development -->
+                        <div class="testimonial-item">
+                          <div class="testimonial-credits">
+                            <div class="testimonial-picture">
+                              <img src="moocs/MITx_14750x.png" alt="">
+                            </div>
+                            <div class="testimonial-author-info">
+                              <p class="testimonial-author">MITx: 14.750x</p>
+                              <p class="testimonial-firm">Political Economy and Economic Development</p>
+                            </div>
+                          </div>
+                          <div class="testimonial-content">
+                            <div class="testimonial-text">
+                              <p><strong>The methodology to argue causality in sociology researches. Theories and findings related to political leaders, institutions, voting, etc.</strong> <i class="fa fa-comment"></i> (I hoped to learn a theoretical framework in understanding the developing countries.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- End of Testimonial Development -->
+
+                        <!-- Testimonial Kotlin -->
+                        <div class="testimonial-item">
+                          <div class="testimonial-credits">
+                            <div class="testimonial-picture">
+                              <img src="moocs/ud9012.png" alt="">
+                            </div>
+                            <div class="testimonial-author-info">
+                              <p class="testimonial-author">Udacity: UD9012</p>
+                              <p class="testimonial-firm">Developing Android Apps with Kotlin</p>
+                            </div>
+                          </div>
+                          <div class="testimonial-content">
+                            <div class="testimonial-text">
+                              <p><strong>Kotlin programming. Android mobile application development.</strong> <i class="fa fa-comment"></i> (The UAEU generously offered free meals and accommodations, so I help them build a blockchain application to pay the kindness back.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- End of Testimonial Kotlin -->
+
+
+
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of Tesimonials -->
 
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
