Add COVID-19 story

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a class="pt-trigger" href="#projects" data-animation="62">Stories</a>
               </li>
               <li>
-                <a class="pt-trigger" href="#blog" data-animation="62">Blog</a>
+                <a class="pt-trigger" href="#blog" data-animation="62">Blogs</a>
               </li>
               <!--<li>-->
                 <!--<a class="pt-trigger" href="#contact" data-animation="62">Contact</a>-->
@@ -346,7 +346,7 @@
                           </div>
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p><strong>The normative framework of journalism in the digital age. Challenges including hate, incitement, and privacy. How to regulate technology innovations.</strong> <i class="fa fa-comment"></i> (I took this course for fun during my unexpected stay at the UAEU because my roommate studies Journalism.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
+                              <p><strong>The normative framework of journalism in the digital age. Challenges including hate, incitement, surveillance, intermediary liability, and privacy. The social aspects of technology innovations and how to regulate them.</strong> <i class="fa fa-comment"></i> (I took this course for fun during my unexpected stay at the UAEU because my roommate studies Journalism.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
                             </div>
                           </div>
                         </div>
@@ -513,12 +513,24 @@
                     <!-- Portfolio Grid -->
                     <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
 
+
+                      <figure class="item" data-groups='["all", "product", "field"]'>
+                        <a href="https://medium.com/@shiyinw/my-fight-with-the-covid-19-and-how-it-shaped-my-career-trajectories-3a5883a0cc88?sk=b3c0a1d419eb457e3cab19a791f4b272" target="_blank">
+                          <img src="field/covid19/cover.png" alt="">
+                          <div>
+                            <h5 class="name">My Fight With the COVID-19 and How It Shaped My Career Trajectories</h5>
+                            <small>Academic Researches, Voluntary Works, Online Learning, and Beyond</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
                       <figure class="item" data-groups='["all", "research"]'>
                         <a class="ajax-page-load" href="research/stanford/stanford.html">
                           <img src="research/stanford/cover.png" alt="">
                           <div>
                             <h5 class="name">Can Higher-Level Molecular Networks Explain Biology?  A User’s Perspective</h5>
-                            <small>Stanford Helix</small>
+                            <small>Stanford Helix Group</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
@@ -877,7 +889,7 @@
             <section class="pt-page" data-id="blog">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Blog</h2>
+                  <h2>Blogs</h2>
                 </div>
                 <div class="page-content">
 
